更新按钮提示文字和未来展望内容

--- a/popup.html
+++ b/popup.html
@@ -47,7 +47,7 @@
         </select>
         
         <!-- 全屏按钮 -->
-        <button class="control-btn fullscreen-btn" title="在新标签页打开当前视频"><i class="fas fa-expand"></i></button>
+        <button class="control-btn fullscreen-btn" title="定位到当前播放视频"><i class="fas fa-expand"></i></button>
         
         <!-- 播放器按钮 -->
         <button class="control-btn player-btn" title="打开独立播放器"><i class="fas fa-desktop"></i></button>
